# geldaq

./: .copier-answers.yml  .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml  requirements.txt  update.ps1
.github/workflows/: bump.yml  main.yml  publish.yml  sphinx.yml
.tools/: pyproject.toml
.tools/requirements/: requirements_both.txt  requirements_project.txt
docs/: _config.yml  _toc.yml  conf.py  home.md
docs/example/: markdown-notebooks.md  notebooks.ipynb
examples/: CHANGES.TXT
examples/Basic/: eAddresses.py  eNames.py  eReadAddress.py  eReadAddresses.py  eReadName.py  eReadNames.py  eWriteAddress.py  eWriteAddresses.py  eWriteName.py  eWriteNames.py  write_read_loop_with_config.py
examples/More/1-Wire/: 1_wire.py
examples/More/AIN/: dual_ain_loop.py  single_ain.py  single_ain_with_config.py
examples/More/Config/: read_config.py  read_device_name_string.py  write_device_name_string.py  write_power_config.py
examples/More/DIO/: single_dio_read.py  single_dio_write.py
examples/More/DIO_EF/: dio_ef_config_1_pwm_and_1_counter.py
examples/More/Ethernet/: read_ethernet_config.py  read_ethernet_mac.py  write_ethernet_config.py
examples/More/I2C/: i2c_eeprom.py
examples/More/List_All/: list_all.py
examples/More/Lua/: lua_execution_control.py
examples/More/SD/: change_directory.py  delete_file.py  get_disk_info.py  list_directory.py  print_working_directory.py  read_file.py  sd_util.py
examples/More/SPI/: spi.py
examples/More/Stream/: advanced_aperiodic_stream_out.py  (+9 more)
src/geldaq/: __init__.py  ain.py  configs.py  plotAIN.py
tests/: test_geldaq.py
(+16 files in other folders)
