[build-system]
requires = [ "flit_core >=3.3,<4",]
build-backend = "flit_core.buildapi"

[project]
name = "geldaq"
requires-python = ">=3.10"
dependencies = [ "pandas~=1.5.2", "labjack-ljm~=1.21.0", "keyboard~=0.13.5",]
readme = "README.md"
dynamic = [ "version", "description",]
[[project.authors]]
name = "Abdulkarem Sennain, Blake Naccarato"
email = "blake.naccarato+geldaq@gmail.com"

[project.urls]
Home = "https://github.com/blakeNaccarato/geldaq"

[project.optional-dependencies]
