[build-system]
requires = [ "flit_core >=3.3,<4",]
build-backend = "flit_core.buildapi"

[project]
name = "geldaq"
requires-python = ">=3.10"
dependencies = [ "pandas~=2.0.0", "labjack-ljm~=1.21.0", "keyboard~=0.13.5",]
readme = "README.md"
dynamic = [ "version", "description",]
[[project.authors]]
name = "Daniel Fisher, Blake Naccarato, Abdulkarem Sennain"
email = "blake.naccarato+geldaq@gmail.com"

[project.urls]
Home = "https://github.com/blakeNaccarato/geldaq"

[tool.ruff]
fix = true
select = [ "ALL",]
src = [ "src", "tests",]
target-version = "py311"
extend-exclude = [ "template", "typings", ".github", ".tools", ".venv",]
ignore = [ "ANN", "ARG005", "C408", "COM", "D10", "D20", "D213", "DTZ", "EM", "ERA", "FBT", "INP001", "ISC", "PD013", "PD901", "PGH003", "RET", "TCH", "TRY003", "F821", "S101", "T201",]
unfixable = [ "F601",]

[tool.ruff.per-file-ignores]
"tests/**" = [ "ARG001", "S101",]

[tool.ruff.flake8-bugbear]
extend-immutable-calls = [ "typer.Argument", "typer.Option",]

[tool.ruff.pep8-naming]
classmethod-decorators = [ "pydantic.validator",]
